# HermesGo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: windows-build.yml
assets/: README.md
assets/demo/: index.html
docs/: ARCHITECTURE.md  BUILD.md  TROUBLESHOOTING.md
hermes_webui/: __init__.py  __main__.py  config.py  hermes_manager.py  logging_setup.py  paths.py  proxy.py  server.py  terminal.py  webview_host.py
hermes_webui/web/: app.js  index.html  styles.css
